--- a/admin/index.html
+++ b/admin/index.html
@@ -33,7 +33,25 @@
 </head>
 
 <body ng-app="mdposteditor">
-
+<div ng-controller="ModalController as modal" ng-show="modal.visible">
+	<div class="modal fade">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h4 class="modal-title">{{modal.title}}</h4>
+				</div>
+				<div class="modal-body">
+					<p>{{modal.content}}</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal" ng-click="modal.cancel()">Cancel</button>
+					<button type="button" class="btn btn-primary" ng-click="modal.accept()">Ok</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 <div id="wrapper">
 	<div id="page-wrapper">
 		<!-- NAVIGATION -->
